<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_preference_screen">

    <EditTextPreference
        android:defaultValue="@string/settings_number_of_items_default"
        android:inputType="number"
        android:key="@string/settings_number_of_items_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_items_title" />

    <ListPreference
        android:defaultValue="@string/settings_sections_default"
        android:entries="@array/settings_sections_labels"
        android:entryValues="@array/settings_sections_values"
        android:key="@string/settings_sections_key"
        android:title="@string/settings_sections_mainlabel" />

</PreferenceScreen>